--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -22,6 +22,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -41,25 +42,29 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
+  border: 1px solid #a4c6b0;
+  padding: 10px 15px;
+  font: normal normal normal 18px/1 Avenir, Helvetica, Arial, sans-serif;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-.card {
-  padding: 2em;
+  &:disabled {
+    pointer-events: none;
+  }
+
+  &:hover {
+    border-color: #42bd31;
+  }
+
+  &:focus,
+  &:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
+
+  @media (min-width: 500px) {
+    padding: 20px 30px;
+  }
 }
 
 #app {
@@ -68,6 +73,7 @@ button:focus-visible {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: light) {
